@@ -27,7 +27,9 @@
 - better quality for vips_resize() with linear/cubic kernels 
 - pyvips8 can create new metadata
 - better upsizing with vips_resize()
-- added vips_convf() ... im_conv_f() rewritten as a class
+- added vips_convf(), vips_convi() ... im_conv*() functions rewritten as
+  classes
+- new fixed-point vector path for convi is up to 2x faster
 
 18/5/16 started 8.3.2
 - more robust vips image reading
